--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 08:05:04 2018</p>
+         Last Run: Sat Jul 14 09:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -30,15 +30,15 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>11</td>
                         <td>11</td>
                         <td>0</td>
-                        <td>66</td>
+                        <td>64</td>
                         <td>3</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>29</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -46,23 +46,23 @@
                         <td>13</td>
                         <td>13</td>
                         <td>0</td>
-                        <td>53</td>
+                        <td>52</td>
                         <td>5</td>
                         <td>13</td>
                         <td>NNW</td>
-                        <td>19</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>16</td>
-                        <td>16</td>
+                        <td>15</td>
+                        <td>15</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>43</td>
                         <td>6</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>NNW</td>
-                        <td>13</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -134,7 +134,7 @@
                "data":[
                  "11",
                  "13",
-                 "16",
+                 "15",
                  "18",
                  "19"
                ]
@@ -147,7 +147,7 @@
                "data":[
                  "11",
                  "13",
-                 "16",
+                 "15",
                  "18",
                  "19"
                ]
@@ -214,9 +214,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
-                 "53",
-                 "42",
+                 "64",
+                 "52",
+                 "43",
                  "37",
                  "34"
                ]
@@ -226,9 +226,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "29",
-                 "19",
-                 "13",
+                 "37",
+                 "23",
+                 "16",
                  "6",
                  "21"
                ]
@@ -248,7 +248,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 08:05:04 2018</p>
+         Last Run: Sat Jul 14 09:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -486,7 +486,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 08:05:04 2018</p>
+         Last Run: Sat Jul 14 09:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -686,7 +686,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 08:05:04 2018</p>
+         Last Run: Sat Jul 14 09:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -708,8 +708,8 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>28</td>
-                        <td>28</td>
+                        <td>29</td>
+                        <td>29</td>
                         <td>0</td>
                         <td>27</td>
                         <td>1</td>
@@ -723,9 +723,9 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>34</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>E</td>
                         <td>21</td>
                      </tr>
@@ -739,7 +739,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>ENE</td>
-                        <td>22</td>
+                        <td>20</td>
                      </tr>
                   </tbody>
                </table>
@@ -783,7 +783,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "28",
+                 "29",
                  "27",
                  "24"
                ]
@@ -794,7 +794,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "28",
+                 "29",
                  "27",
                  "24"
                ]
@@ -858,7 +858,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "27",
-                 "33",
+                 "34",
                  "42"
                ]
              },
@@ -869,7 +869,7 @@
                "data":[
                  "22",
                  "21",
-                 "22"
+                 "20"
                ]
              }
            ]
@@ -886,7 +886,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 08:05:04 2018</p>
+         Last Run: Sat Jul 14 09:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Douglas Glen Blvd SE</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -923,7 +923,7 @@
                         <td>24</td>
                         <td>24</td>
                         <td>10</td>
-                        <td>39</td>
+                        <td>38</td>
                         <td>1</td>
                         <td>16</td>
                         <td>NNE</td>
@@ -1058,7 +1058,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "36",
-                 "39",
+                 "38",
                  "45"
                ]
              },
