--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 23:05:22 2018</p>
+         Last Run: Sun Jul 15 00:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -49,7 +49,7 @@
                         <td>39</td>
                         <td>3</td>
                         <td>8</td>
-                        <td>WNW</td>
+                        <td>W</td>
                         <td>10</td>
                      </tr>
                      <tr>
@@ -60,9 +60,9 @@
                         <td>0</td>
                         <td>34</td>
                         <td>4</td>
-                        <td>6</td>
-                        <td>NNE</td>
-                        <td>14</td>
+                        <td>8</td>
+                        <td>N</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>6</td>
                         <td>8</td>
                         <td>ENE</td>
-                        <td>8</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -85,8 +85,8 @@
                         <td>26</td>
                         <td>7</td>
                         <td>8</td>
-                        <td>E</td>
-                        <td>15</td>
+                        <td>ENE</td>
+                        <td>27</td>
                      </tr>
                   </tbody>
                </table>
@@ -228,9 +228,9 @@
                "data":[
                  "7",
                  "10",
-                 "14",
-                 "8",
-                 "15"
+                 "15",
+                 "9",
+                 "27"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 23:05:22 2018</p>
+         Last Run: Sun Jul 15 00:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -281,10 +281,10 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>29</td>
-                        <td>29</td>
+                        <td>28</td>
+                        <td>28</td>
                         <td>0</td>
-                        <td>23</td>
+                        <td>24</td>
                         <td>1</td>
                         <td>13</td>
                         <td>SE</td>
@@ -345,7 +345,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "29",
-                 "29",
+                 "28",
                  "27"
                ]
              },
@@ -356,7 +356,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "29",
-                 "29",
+                 "28",
                  "27"
                ]
              }
@@ -419,7 +419,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "21",
-                 "23",
+                 "24",
                  "28"
                ]
              },
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 23:05:22 2018</p>
+         Last Run: Sun Jul 15 00:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -493,14 +493,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>1</td>
                         <td>43</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>39</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -546,7 +546,7 @@
                "data":[
                  "28",
                  "27",
-                 "25"
+                 "24"
                ]
              },
              {
@@ -557,7 +557,7 @@
                "data":[
                  "28",
                  "27",
-                 "25"
+                 "24"
                ]
              }
            ]
@@ -630,7 +630,7 @@
                "data":[
                  "29",
                  "38",
-                 "39"
+                 "40"
                ]
              }
            ]
@@ -647,7 +647,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 23:05:22 2018</p>
+         Last Run: Sun Jul 15 00:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -866,7 +866,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 14 23:05:22 2018</p>
+         Last Run: Sun Jul 15 00:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -888,14 +888,14 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>17</td>
-                        <td>17</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>3</td>
-                        <td>53</td>
+                        <td>56</td>
                         <td>3</td>
                         <td>10</td>
                         <td>WNW</td>
-                        <td>22</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -903,47 +903,47 @@
                         <td>19</td>
                         <td>19</td>
                         <td>4</td>
-                        <td>47</td>
+                        <td>48</td>
                         <td>4</td>
-                        <td>8</td>
-                        <td>WNW</td>
-                        <td>16</td>
+                        <td>10</td>
+                        <td>NW</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>0</td>
+                        <td>3</td>
                         <td>41</td>
                         <td>6</td>
                         <td>8</td>
-                        <td>WNW</td>
-                        <td>13</td>
+                        <td>NW</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>0</td>
-                        <td>37</td>
+                        <td>4</td>
+                        <td>36</td>
                         <td>7</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WNW</td>
-                        <td>15</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>0</td>
+                        <td>4</td>
                         <td>34</td>
                         <td>7</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WNW</td>
-                        <td>22</td>
+                        <td>21</td>
                      </tr>
                   </tbody>
                </table>
@@ -989,7 +989,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "17",
+                 "18",
                  "19",
                  "20",
                  "21",
@@ -1002,7 +1002,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "17",
+                 "18",
                  "19",
                  "20",
                  "21",
@@ -1061,9 +1061,9 @@
                "data":[
                  "3",
                  "4",
-                 "0",
-                 "0",
-                 "0"
+                 "3",
+                 "4",
+                 "4"
                ]
              },
              {
@@ -1071,10 +1071,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
-                 "47",
+                 "56",
+                 "48",
                  "41",
-                 "37",
+                 "36",
                  "34"
                ]
              },
@@ -1083,11 +1083,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "22",
-                 "16",
-                 "13",
-                 "15",
-                 "22"
+                 "21",
+                 "14",
+                 "11",
+                 "14",
+                 "21"
                ]
              }
            ]
