--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 00:05:08 2018</p>
+         Last Run: Sun Jul 15 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -60,9 +60,9 @@
                         <td>0</td>
                         <td>34</td>
                         <td>4</td>
-                        <td>8</td>
-                        <td>N</td>
-                        <td>15</td>
+                        <td>6</td>
+                        <td>NNE</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -70,11 +70,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>30</td>
                         <td>6</td>
                         <td>8</td>
                         <td>ENE</td>
-                        <td>9</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -82,9 +82,9 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>26</td>
+                        <td>27</td>
                         <td>7</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>ENE</td>
                         <td>27</td>
                      </tr>
@@ -217,8 +217,8 @@
                  "47",
                  "39",
                  "34",
-                 "29",
-                 "26"
+                 "30",
+                 "27"
                ]
              },
              {
@@ -228,8 +228,8 @@
                "data":[
                  "7",
                  "10",
-                 "15",
-                 "9",
+                 "14",
+                 "8",
                  "27"
                ]
              }
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 00:05:08 2018</p>
+         Last Run: Sun Jul 15 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -281,10 +281,10 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>28</td>
-                        <td>28</td>
+                        <td>29</td>
+                        <td>29</td>
                         <td>0</td>
-                        <td>24</td>
+                        <td>23</td>
                         <td>1</td>
                         <td>13</td>
                         <td>SE</td>
@@ -299,7 +299,7 @@
                         <td>28</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>ESE</td>
+                        <td>SE</td>
                         <td>0</td>
                      </tr>
                   </tbody>
@@ -345,7 +345,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "29",
-                 "28",
+                 "29",
                  "27"
                ]
              },
@@ -356,7 +356,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "29",
-                 "28",
+                 "29",
                  "27"
                ]
              }
@@ -419,7 +419,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "21",
-                 "24",
+                 "23",
                  "28"
                ]
              },
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 00:05:08 2018</p>
+         Last Run: Sun Jul 15 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -476,7 +476,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>29</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -486,21 +486,21 @@
                         <td>0</td>
                         <td>35</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>E</td>
-                        <td>38</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>1</td>
                         <td>43</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>40</td>
+                        <td>52</td>
                      </tr>
                   </tbody>
                </table>
@@ -546,7 +546,7 @@
                "data":[
                  "28",
                  "27",
-                 "24"
+                 "25"
                ]
              },
              {
@@ -557,7 +557,7 @@
                "data":[
                  "28",
                  "27",
-                 "24"
+                 "25"
                ]
              }
            ]
@@ -628,9 +628,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "29",
-                 "38",
-                 "40"
+                 "28",
+                 "40",
+                 "52"
                ]
              }
            ]
@@ -647,7 +647,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 00:05:08 2018</p>
+         Last Run: Sun Jul 15 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -668,51 +668,51 @@
                   <tbody>
                      <tr>
                         <td>05:00 PM</td>
-                        <td>Clear</td>
-                        <td>27</td>
-                        <td>27</td>
+                        <td>Partly Cloudy</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>5</td>
-                        <td>34</td>
+                        <td>35</td>
                         <td>3</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>29</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>26</td>
-                        <td>26</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>15</td>
-                        <td>35</td>
+                        <td>36</td>
                         <td>2</td>
                         <td>14</td>
-                        <td>ESE</td>
-                        <td>32</td>
+                        <td>SE</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>16</td>
-                        <td>39</td>
+                        <td>19</td>
+                        <td>40</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>ENE</td>
-                        <td>32</td>
+                        <td>E</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>16</td>
-                        <td>47</td>
+                        <td>20</td>
+                        <td>48</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NE</td>
-                        <td>30</td>
+                        <td>31</td>
                      </tr>
                   </tbody>
                </table>
@@ -757,8 +757,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "27",
                  "26",
+                 "25",
                  "24",
                  "22"
                ]
@@ -769,8 +769,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "27",
                  "26",
+                 "25",
                  "24",
                  "22"
                ]
@@ -826,8 +826,8 @@
                "data":[
                  "5",
                  "15",
-                 "16",
-                 "16"
+                 "19",
+                 "20"
                ]
              },
              {
@@ -835,10 +835,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "34",
                  "35",
-                 "39",
-                 "47"
+                 "36",
+                 "40",
+                 "48"
                ]
              },
              {
@@ -846,10 +846,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "29",
-                 "32",
-                 "32",
-                 "30"
+                 "39",
+                 "40",
+                 "37",
+                 "31"
                ]
              }
            ]
@@ -866,7 +866,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 15 00:05:08 2018</p>
+         Last Run: Sun Jul 15 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -888,10 +888,10 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>17</td>
+                        <td>17</td>
                         <td>3</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>3</td>
                         <td>10</td>
                         <td>WNW</td>
@@ -903,7 +903,7 @@
                         <td>19</td>
                         <td>19</td>
                         <td>4</td>
-                        <td>48</td>
+                        <td>49</td>
                         <td>4</td>
                         <td>10</td>
                         <td>NW</td>
@@ -915,9 +915,9 @@
                         <td>20</td>
                         <td>20</td>
                         <td>3</td>
-                        <td>41</td>
+                        <td>42</td>
                         <td>6</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NW</td>
                         <td>11</td>
                      </tr>
@@ -927,7 +927,7 @@
                         <td>21</td>
                         <td>21</td>
                         <td>4</td>
-                        <td>36</td>
+                        <td>37</td>
                         <td>7</td>
                         <td>10</td>
                         <td>WNW</td>
@@ -939,7 +939,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>4</td>
-                        <td>34</td>
+                        <td>35</td>
                         <td>7</td>
                         <td>10</td>
                         <td>WNW</td>
@@ -989,7 +989,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "18",
+                 "17",
                  "19",
                  "20",
                  "21",
@@ -1002,7 +1002,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "18",
+                 "17",
                  "19",
                  "20",
                  "21",
@@ -1071,11 +1071,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
-                 "48",
-                 "41",
-                 "36",
-                 "34"
+                 "57",
+                 "49",
+                 "42",
+                 "37",
+                 "35"
                ]
              },
              {
